fixed alignment problem in list elements

--- a/frontend/src/components/userpage/DetailsTab.module.css
+++ b/frontend/src/components/userpage/DetailsTab.module.css
@@ -83,6 +83,12 @@
     cursor: pointer;
 }
 
+.vertical_list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .vertical_list ul{
     width: 100%;
     display: flex;
